--- a/source/scss/2-helpers/_variables.scss
+++ b/source/scss/2-helpers/_variables.scss
@@ -3,13 +3,13 @@
 // #######################################
     
 // List Colors
-$white: #FFF;
+$white: #FFFFFF;
 $grey-dark: #212529;
 $grey: #343a40;
 $grey-light: #868e96;
-$blue-dark: #3b5bdb;
-$blue: #228be6;
-$blue-light: #4dabf7;
+$blue-dark: #6a11cb;
+$blue: #2575fc;
+$blue-light: #4facfe;
 
 // Website
 $brand: $blue;
