--- a/source/scss/4-layout/_content.scss
+++ b/source/scss/4-layout/_content.scss
@@ -3,6 +3,7 @@
 // #######################################
 
 .content {
+  margin-top: 1px;
   padding-top: 40px;
   padding-bottom: 40px;
 
@@ -10,5 +11,28 @@
     padding-top: 80px;
     padding-bottom: 80px;
     text-align: center;
+  }
+}
+
+// Breakpoint
+
+@include breakpoint(small) {
+  .content {
+    > section {
+      text-align: left;
+    }
+
+    h1,
+    h2,
+    h3,
+    h4 {
+      text-align: center;
+    }
+  }
+}
+
+@include breakpoint(large) {
+  main {
+    margin-left: 10vw;
   }
 }
