--- a/source/scss/4-layout/_nav.scss
+++ b/source/scss/4-layout/_nav.scss
@@ -119,7 +119,7 @@
   }
 
   &__sidebar {
-    padding: 20px 0;
+    padding: $wrapper-padding 0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
