--- a/source/scss/3-basics/_container.scss
+++ b/source/scss/3-basics/_container.scss
@@ -9,6 +9,10 @@
 
     &--small {
         max-width: $wrapper--small;
+        padding-left: $wrapper-padding;
+        padding-right: $wrapper-padding;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
