--- a/source/scss/4-layout/_header.scss
+++ b/source/scss/4-layout/_header.scss
@@ -19,6 +19,21 @@ header {
 }
 
 .header {
+  &--small {
+    height: 500px;
+    min-height: 500px;
+
+    .wrapper-padding {
+      justify-content: center;
+    }
+
+    .header {
+      &__text {
+        margin: 0;
+      }
+    }
+  }
+
   &__text {
     margin-top: 20vh;
   }
