--- a/source/scss/3-basics/_base.scss
+++ b/source/scss/3-basics/_base.scss
@@ -10,6 +10,12 @@ html {
 
 body {
     background-color: $background;
+    max-width: 100vw;
     width: 100vw;
     overflow-x: hidden;
+}
+
+::selection {
+    color: $background;
+    background-color: $brand;
 }
