--- a/source/scss/3-basics/_typography.scss
+++ b/source/scss/3-basics/_typography.scss
@@ -20,6 +20,14 @@ h3,
 h4 {
     color: $font-dark-color;
     font-weight: $font-bold;
+    margin-top: 0.6em;
+    margin-bottom: 0.3em;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    hyphens: auto;
 }
 
 h1, .h1 {
@@ -36,6 +44,12 @@ h3, .h3 {
 
 h4, .h4 {
     @include fluid-type(font-size, $screen-min, $screen-max, $f-h4-size1, $f-h4-size2);
+}
+
+// Paragraph 
+
+p {
+    margin: 0.2em 0;
 }
 
 // Links 
