--- a/source/scss/5-modules/_showcase.scss
+++ b/source/scss/5-modules/_showcase.scss
@@ -18,6 +18,7 @@
   }
 
   &__title {
+    margin-top: 0;
     margin-bottom: 20px;
   }
 }
@@ -75,7 +76,7 @@
 
     &__bg {
       top: 80px;
-      width: 35%;
+      width: 33%;
       height: 50%;
     }
 
