--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -25,7 +25,10 @@
 
 // 5 Modules
 @import '5-modules/btns';
+@import '5-modules/features';
 @import '5-modules/showcase';
 
 // 6 Pages
 @import '6-pages/home';
+@import '6-pages/features';
+@import '6-pages/impressum';
