--- a/source/scss/4-layout/_header.scss
+++ b/source/scss/4-layout/_header.scss
@@ -10,7 +10,7 @@ header {
   text-align: center;
   overflow: hidden;
 
-  .wrapper-padding {
+  > .wrapper {
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -23,7 +23,7 @@ header {
     height: 500px;
     min-height: 500px;
 
-    .wrapper-padding {
+    > .wrapper {
       justify-content: center;
     }
 
