--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -68,5 +68,9 @@
 @import '6-pages/pricing';
 /* Download */
 @import '6-pages/download';
+/* Team */
+@import '6-pages/team';
+/* Contact */
+@import '6-pages/contact';
 /* Impressum */
 @import '6-pages/impressum';
