--- a/source/scss/5-modules/_form.scss
+++ b/source/scss/5-modules/_form.scss
@@ -13,6 +13,7 @@
     align-items: flex-start;
 
     input:not([type=submit]),
+    textarea,
     select {
       background-color: $background;
       border: none;
@@ -27,7 +28,6 @@
       &:focus {
         transform: scale(1.05);
         box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.15);
-        outline: none;
       }
 
       &:focus + label {
@@ -44,6 +44,11 @@
     ::placeholder {
       font-size: 0.9em;
       color: $font-light-color;
+    }
+
+    textarea {
+      resize: vertical;
+      min-height: 300px;
     }
 
     label {
@@ -106,6 +111,7 @@
       flex-direction: column;
       align-items: flex-start;
       margin-bottom: 0 !important;
+      width: 100%;
 
       &--1-3 {
         width: 32%;
@@ -116,7 +122,7 @@
       }
 
       &--1-2 {
-        width: 49.5%;
+        width: 49%;
       }
 
       input[type=submit] {
