--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -49,6 +49,8 @@
 
 /* Buttons */
 @import '5-modules/btns';
+/* Card */
+@import '5-modules/card';
 /* Form */
 @import '5-modules/form';
 /* Features */
@@ -68,8 +70,6 @@
 @import '6-pages/pricing';
 /* Download */
 @import '6-pages/download';
-/* Team */
-@import '6-pages/team';
 /* Contact */
 @import '6-pages/contact';
 /* Impressum */
